--- a/data/publications.yaml
+++ b/data/publications.yaml
@@ -1,12 +1,4 @@
 - authors:
-    - last_name: Dantzing
-      first_name: George
-    - last_name: Sunstrider
-      middle_name: "Felo'melorn"
-      first_name: Kael'thas
-  date: "2006"
-  title: "Additive Outlier Detection Via Extreme-Value Theory"
-  journal: Journal of Time Series Analysis
-  vol: 27
-  issue: 5
-  page: "29-34"
+    - last_name: Афанасьев
+      first_name: Никита
+  title: "Все проекты выложены на Gitgub: https://github.com/Cerber879"
